# data-doctor

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  test_connection.py
backend/scripts/: create_what_if_scenarios.py  setup_all_scenarios.py  setup_ecommerce_scenarios.py  setup_finance_scenarios.py  setup_governance_tags.py  setup_healthcare_scenarios.py  setup_multi_dataset_demo.py  setup_realistic_demo.py
backend/src/: __init__.py  config.py  constants.py  exceptions.py  main.py  schemas.py
backend/src/api/: dependencies.py
backend/src/api/v1/: __init__.py  demo.py  diagnosis.py  health.py
backend/src/core/: ai_layer.py  api_client.py  confidence.py  detection.py  governance.py  impact.py  lineage.py  root_cause.py  suggestions.py
backend/tests/: __init__.py  conftest.py  test_main.py
backend/tests/api/: test_diagnosis.py  test_health.py
backend/tests/core/: test_api_client.py  test_confidence.py  test_detection.py  test_impact.py  test_lineage.py  test_root_cause.py  test_suggestions.py
docs/: custom-mode.docx  decision.docx  openmetadata-usage.docx  research.docx  running-demo.docx  specs.docx
frontend/: index.html
frontend/public/: desktop.ini
frontend/src/: App.tsx  api.ts  index.css  types.ts
openmetadata-docker/: docker-compose.ecommerce-scenarios.yml  docker-compose.finance-scenarios.yml  docker-compose.healthcare-scenarios.yml  docker-compose.sample-db.yml  docker-compose.scenarios.yml
openmetadata-docker/sample-data/: ecommerce-init.sql  finance-init.sql  healthcare-init.sql  init.sql
(+10 files in other folders)
